--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
