Switch to mongo and create connection with mongoose

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,6 +1,6 @@
 PORT=3000
-MYSQL_DATABASE=some_db
-MYSQL_HOST=192.168.x.x
-MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=some_password
+MONGO_DATABASE=some_db
+MONGO_HOST=192.168.x.x
+MONGO_PORT=3306
+MONGO_USER=root
+MONGO_PASSWORD=some_password
