--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.3.0"
+    "mongoose": "^5.13.7",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
