Add routes and controllers

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -4,4 +4,4 @@ MONGO_HOST=192.168.x.x
 MONGO_PORT=3306
 MONGO_USER=root
 MONGO_PASSWORD=some_password
-JSON_WEBTOKEN_AUTHKEY=some_key
+JWT_AUTHKEY=some_key
