--- a/app/package.json
+++ b/app/package.json
@@ -20,12 +20,14 @@
     "@types/react-syntax-highlighter": "^13.5.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.3",
+    "redux-persist": "^6.0.0",
     "sass": "^1.34.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
